Fix HTML errors and backlinks to index.html

--- a/new/index.html
+++ b/new/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/index.html">Thorsten Zöller</a></h1>
+      <h1><a href="/">Thorsten Zöller</a></h1>
     </header>
 
     <h2>My New Website</h2>
