--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/index.html">Thorsten Zöller</a></h1>
+      <h1><a href="/">Thorsten Zöller</a></h1>
     </header>
 
     <h2>Hey there!</h2>
@@ -42,6 +42,7 @@
         Yes, <a href="https://dailystoic.com/this-is-the-mindset-for-life/">This is
         the Mindset For Life</a>.
       </dd>
+    </dl>
 
     <p><a href="/finds/">See all...</a></p>
 
