Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -43,9 +43,26 @@
     </p>
 
     <p>
-      The site is hosted on <a href="https://pages.github.com/">GitHub
-      Pages</a>.
+      This site is:
     </p>
+
+    <ul>
+      <li>
+        Marked up with <a
+        href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fthorstenzoeller.com%2F">W3C
+        validated HTML5</a>.
+      </li>
+      <li>
+        Styled with <a
+        href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fthorstenzoeller.com%2Fstyle.css&profile=css3svg&usermedium=all&warning=1&vextwarning=">W3C
+        validated CSS Level 3</a>.
+      </li>
+      <li>
+        <a
+        href="https://github.com/thorstenzoeller/thorstenzoeller.github.io">Hosted
+        on GitHub</a> with <a href="https://pages.github.com/">GitHub Pages</a>.
+      </li>
+    </ul>
 
   </body>
 </html>
