--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,11 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-06-20</dt>
+      <dd>
+        New website is live! <a href="/new/">Here's</a> why.
+      </dd>
+
       <dt class="date">2021-05-23</dt>
       <dd>
         A good habit to form: Reading in <em>A Calendar of Wisdom</em> by Leo
@@ -29,7 +34,7 @@
 
       <dt class="date">2021-05-06</dt>
       <dd>
-        Yes, <a href="https://dailystoic.com/this-is-the-mindset-for-life/">This is
+        Yes &ndash; <a href="https://dailystoic.com/this-is-the-mindset-for-life/">This is
         the Mindset For Life</a>.
       </dd>
 
