--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-06-20</dt>
+      <dd>
+        New website is live! <a href="/new/">Here's</a> why.
+      </dd>
+
       <dt class="date">2021-05-23</dt>
       <dd>
         A good habit to form: A daily reading in <em>A Calendar of Wisdom</em>
@@ -35,12 +40,6 @@
         <a href="https://www.idler.co.uk/article/73979-how-to-write/">How to
         Write: why jotting things into notebooks improves your writing</a>
         &ndash; I fully agree.
-      </dd>
-
-      <dt class="date">2021-05-06</dt>
-      <dd>
-        Yes, <a href="https://dailystoic.com/this-is-the-mindset-for-life/">This is
-        the Mindset For Life</a>.
       </dd>
     </dl>
 
