Update 'Finds & Thoughts'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-06-28</dt>
+      <dd>
+        Slowly getting used to using the <a
+        href="https://github.com/fcambus/spleen">Spleen</a> font in the
+        terminal.
+      </dd>
+
       <dt class="date">2021-06-20</dt>
       <dd>
         New website is live! <a href="/new/">Here's</a> why.
@@ -33,13 +40,6 @@
       <dd>
         A good habit to form: A daily reading in <em>A Calendar of Wisdom</em>
         by Leo Tolstoy.
-      </dd>
-
-      <dt class="date">2021-05-14</dt>
-      <dd>
-        <a href="https://www.idler.co.uk/article/73979-how-to-write/">How to
-        Write: why jotting things into notebooks improves your writing</a>
-        &ndash; I fully agree.
       </dd>
     </dl>
 
