--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,13 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-06-28</dt>
+      <dd>
+        Slowly getting used to using the <a
+        href="https://github.com/fcambus/spleen">Spleen</a> font in the
+        terminal.
+      </dd>
+
       <dt class="date">2021-06-20</dt>
       <dd>
         New website is live! <a href="/new/">Here's</a> why.
