Update 'Finds & Thoughts'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-07-04</dt>
+      <dd>
+        Acting yourself into motivation is much more effective than thinking
+        yourself into motivation or waiting for motivation to occur.
+      </dd>
+
       <dt class="date">2021-06-28</dt>
       <dd>
         Slowly getting used to using the <a
@@ -34,12 +40,6 @@
       <dt class="date">2021-06-20</dt>
       <dd>
         New website is live! <a href="/new/">Here's</a> why.
-      </dd>
-
-      <dt class="date">2021-05-23</dt>
-      <dd>
-        A good habit to form: A daily reading in <em>A Calendar of Wisdom</em>
-        by Leo Tolstoy.
       </dd>
     </dl>
 
