--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,12 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-07-04</dt>
+      <dd>
+        Acting yourself into motivation is much more effective than thinking
+        yourself into motivation or waiting for motivation to occur.
+      </dd>
+
       <dt class="date">2021-06-28</dt>
       <dd>
         Slowly getting used to using the <a
