--- a/about/index.html
+++ b/about/index.html
@@ -47,9 +47,10 @@
     </p>
 
     <ul>
+      <li>Plain and simple on purpose.</li>
       <li>
         Marked up with <a
-        href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fthorstenzoeller.com%2F">W3C
+        href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fthorstenzoeller.com%2F">W3C
         validated HTML5</a>.
       </li>
       <li>
