Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,13 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-07-11</dt>
+      <dd>
+        Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.  A
+        big thanks to the developers for what so far looks like another great
+        release!
+      </dd>
+
       <dt class="date">2021-07-04</dt>
       <dd>
         Acting yourself into motivation is much more effective than thinking
