--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-07-11</dt>
+      <dd>
+        Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.  A
+        big thanks to the developers for what so far looks like another great
+        release!
+      </dd>
+
       <dt class="date">2021-07-04</dt>
       <dd>
         Acting yourself into motivation is much more effective than thinking
@@ -35,11 +42,6 @@
         Slowly getting used to using the <a
         href="https://github.com/fcambus/spleen">Spleen</a> font in the
         terminal.
-      </dd>
-
-      <dt class="date">2021-06-20</dt>
-      <dd>
-        New website is live! <a href="/new/">Here's</a> why.
       </dd>
     </dl>
 
