Update 'Finds & Thoughts'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-07-30</dt>
+      <dd>
+        What does it mean to be a leader?  <a
+        href="https://dailystoic.com/do-you-make-others-better/">Leaders make
+        people better.</a> Applies to leading yourself as well.
+      </dd>
+
       <dt class="date">2021-07-11</dt>
       <dd>
         Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.  A
@@ -35,13 +42,6 @@
       <dd>
         Acting yourself into motivation is much more effective than thinking
         yourself into motivation or waiting for motivation to occur.
-      </dd>
-
-      <dt class="date">2021-06-28</dt>
-      <dd>
-        Slowly getting used to using the <a
-        href="https://github.com/fcambus/spleen">Spleen</a> font in the
-        terminal.
       </dd>
     </dl>
 
