--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,13 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-07-30</dt>
+      <dd>
+        What does it mean to be a leader?  <a
+        href="https://dailystoic.com/do-you-make-others-better/">Leaders make
+        people better.</a> Applies to leading yourself as well.
+      </dd>
+
       <dt class="date">2021-07-11</dt>
       <dd>
         Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.  A
