Add 'uses' page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 
     <p><a href="/finds/">See all...</a></p>
 
+    <h3>Uses</h3>
+
+    <p>
+      My <a href="/uses">uses</a> page.
+    </p>
+
     <h3>Now</h3>
 
     <p>
