Update 'Finds & Thoughts'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-08-03</dt>
+      <dd>
+        Every completed Ashtanga practice is a little victory.
+      </dd>
+
       <dt class="date">2021-07-30</dt>
       <dd>
         What does it mean to be a leader?  <a
