Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,14 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-08-06</dt>
+      <dd>
+        Once again, I find myself fascinated by the miracles and history of the
+        <a
+        href="https://en.wikipedia.org/wiki/Laoco%C3%B6n_and_His_Sons">Laocoon
+        Group</a>.
+      </dd>
+
       <dt class="date">2021-08-04</dt>
       <dd>
         In recent years, I have become increasingly aware of the profound
