--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-08-06</dt>
+      <dd>
+        Once again, I find myself fascinated by the miracles and history of the
+        <a
+        href="https://en.wikipedia.org/wiki/Laoco%C3%B6n_and_His_Sons">Laocoon
+        Group</a>.
+      </dd>
+
       <dt class="date">2021-08-04</dt>
       <dd>
         In recent years, I have become increasingly aware of the profound
@@ -43,11 +51,6 @@
         The renovated <a href="http://www.ryanleidner.com/twin-gable-house">Twin
         Gable House</a>, designed by Ryan Leidner, is truly amazing with its
         light-flooded, minimalist interior and beautiful inner courtyard.
-      </dd>
-
-      <dt class="date">2021-08-03</dt>
-      <dd>
-        Every completed Ashtanga practice is a little victory.
       </dd>
     </dl>
 
