--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,28 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-08-08</dt>
+      <dd>
+        Rediscovering the joy of cycling.
+      </dd>
+
+      <dt class="date">2021-08-08</dt>
+      <dd>
+        Two very convenient shell aliases for copying the primary X selection to
+        the system clipboard and vice versa:
+        <pre><code>alias primary2clip='xsel -p | xsel -i -b'
+          alias clip2primary='xsel -b | xsel -i -p'
+        </code></pre>
+        Alternatively, using <em>xclip</em> instead of <em>xsel</em>:
+        <pre><code>alias primary2clip='xclip -o -selection primary | xclip -i -selection clipboard'
+          alias clip2primary='xclip -o -selection clipboard | xclip -i -selection primary'
+        </code></pre>
+        See <a
+        href="https://shallowsky.com/blog/linux/x-selection.html">X is for the X
+        Selection: Copy and Paste on Linux (Shallow Thoughts)</a> for more
+        information.
+      </dd>
+
       <dt class="date">2021-08-06</dt>
       <dd>
         Once again, I find myself fascinated by the miracles and history of the
