Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,15 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-08-29</dt>
+      <dd>
+        <div class="quote">
+          <q>Life is not lost by dying; life is lost minute by minute, day by
+          dragging day, in all the thousand small uncaring ways.</q><br />
+          <span>&ndash; Stephen Vincent Benét</span>
+        </div>
+      </dd>
+
       <dt class="date">2021-08-08</dt>
       <dd>
         Rediscovering the joy of cycling.
