--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-08-29</dt>
+      <dd>
+        <div class="quote">
+          <q>Life is not lost by dying; life is lost minute by minute, day by
+          dragging day, in all the thousand small uncaring ways.</q><br />
+          <span>&ndash; Stephen Vincent Benét</span>
+        </div>
+      </dd>
+
       <dt class="date">2021-08-08</dt>
       <dd>
         Rediscovering the joy of cycling.
@@ -44,14 +53,6 @@
         href="https://shallowsky.com/blog/linux/x-selection.html">X is for the X
         Selection: Copy and Paste on Linux (Shallow Thoughts)</a> for more
         information.
-      </dd>
-
-      <dt class="date">2021-08-06</dt>
-      <dd>
-        Once again, I find myself fascinated by the miracles and history of the
-        <a
-        href="https://en.wikipedia.org/wiki/Laoco%C3%B6n_and_His_Sons">Laocoon
-        Group</a>.
       </dd>
     </dl>
 
