Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,48 +14,63 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-09-06</dt>
+      <dd>
+        <figure class="quote">
+          <blockquote>Man alone measures time.  Man alone chimes the hour.  And,
+          because of this, man alone suffers a paralyzing fear that no other
+          creature endures.  A fear of time running out.</blockquote>
+          <figcaption>Mitch Albom, &ldquo;The Time Keeper&rdquo;</figcaption>
+        </figure>
+
+        <p>(Related recent article by Chris Guillebeau: <a
+        href="https://chrisguillebeau.com/time-anxiety/">Time Anxiety Is the
+        Most Pressing Problem of Our Age</a>)</p>
+      </dd>
+
       <dt class="date">2021-08-29</dt>
       <dd>
-        <div class="quote">
-          <q>Life is not lost by dying; life is lost minute by minute, day by
-          dragging day, in all the thousand small uncaring ways.</q><br />
-          <span>&ndash; Stephen Vincent Benét</span>
-        </div>
+        <figure class="quote">
+          <blockquote>Life is not lost by dying; life is lost minute by minute, day by
+          dragging day, in all the thousand small uncaring ways.</blockquote>
+          <figcaption>Stephen Vincent Benét</figcaption>
+        </figure>
       </dd>
 
       <dt class="date">2021-08-08</dt>
       <dd>
-        Rediscovering the joy of cycling.
+        <p>Rediscovering the joy of cycling.</p>
       </dd>
 
       <dt class="date">2021-08-08</dt>
       <dd>
-        Two very convenient shell aliases for copying the primary X selection to
-        the system clipboard and vice versa:
+        <p>Two very convenient shell aliases for copying the primary X selection
+        to the system clipboard and vice versa:</p>
         <pre><code>alias primary2clip='xsel -p | xsel -i -b'
           alias clip2primary='xsel -b | xsel -i -p'
         </code></pre>
-        Alternatively, using <em>xclip</em> instead of <em>xsel</em>:
+
+        <p>Alternatively, using <em>xclip</em> instead of <em>xsel</em>:</p>
         <pre><code>alias primary2clip='xclip -o -selection primary | xclip -i -selection clipboard'
           alias clip2primary='xclip -o -selection clipboard | xclip -i -selection primary'
         </code></pre>
-        See <a
-        href="https://shallowsky.com/blog/linux/x-selection.html">X is for the X
-        Selection: Copy and Paste on Linux (Shallow Thoughts)</a> for more
-        information.
+
+        <p>See <a href="https://shallowsky.com/blog/linux/x-selection.html">X is
+        for the X Selection: Copy and Paste on Linux (Shallow Thoughts)</a> for
+        more information.</p>
       </dd>
 
       <dt class="date">2021-08-06</dt>
       <dd>
-        Once again, I find myself fascinated by the miracles and history of the
-        <a
+        <p>Once again, I find myself fascinated by the miracles and history of
+        the <a
         href="https://en.wikipedia.org/wiki/Laoco%C3%B6n_and_His_Sons">Laocoon
-        Group</a>.
+        Group</a>.</p>
       </dd>
 
       <dt class="date">2021-08-04</dt>
       <dd>
-        In recent years, I have become increasingly aware of the profound
+        <p>In recent years, I have become increasingly aware of the profound
         effects of walking.  Many ideas occur to me while walking, and to me,
         walking &ndash; especially in solitude in nature &ndash; is a very
         calming and contemplative activity.  <a
@@ -64,80 +79,84 @@
         Philosophers and Writers Have Always Known</a> is another interesting
         article on this subject, focusing on the connection between walking and
         creativity.  In particular, it cites the wonderful book &ldquo;A
-        Philosophy of Walking&rdquo; by Frédéric Gros.
+        Philosophy of Walking&rdquo; by Frédéric Gros.</p>
       </dd>
 
       <dt class="date">2021-08-04</dt>
       <dd>
-        The renovated <a href="http://www.ryanleidner.com/twin-gable-house">Twin
-        Gable House</a>, designed by Ryan Leidner, is truly amazing with its
-        light-flooded, minimalist interior and beautiful inner courtyard.
+        <p>The renovated <a
+        href="http://www.ryanleidner.com/twin-gable-house">Twin Gable House</a>,
+        designed by Ryan Leidner, is truly amazing with its light-flooded,
+        minimalist interior and beautiful inner courtyard.</p>
       </dd>
 
       <dt class="date">2021-08-03</dt>
       <dd>
-        Every completed Ashtanga practice is a little victory.
+        <p>Every completed Ashtanga practice is a little victory.</p>
       </dd>
 
       <dt class="date">2021-07-30</dt>
       <dd>
-        What does it mean to be a leader?  <a
+        <p>What does it mean to be a leader?  <a
         href="https://dailystoic.com/do-you-make-others-better/">Leaders make
-        people better.</a> Applies to leading yourself as well.
+        people better.</a> Applies to leading yourself as well.</p>
       </dd>
 
       <dt class="date">2021-07-11</dt>
       <dd>
-        Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.  A
-        big thanks to the developers for what so far looks like another great
-        release!
+        <p>Installed <a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.
+        A big thanks to the developers for what so far looks like another great
+        release!</p>
       </dd>
 
       <dt class="date">2021-07-04</dt>
       <dd>
-        Acting yourself into motivation is much more effective than thinking
-        yourself into motivation or waiting for motivation to occur.
+        <p>Acting yourself into motivation is much more effective than thinking
+        yourself into motivation or waiting for motivation to occur.</p>
       </dd>
 
       <dt class="date">2021-06-28</dt>
       <dd>
-        Slowly getting used to using the <a
+        <p>Slowly getting used to using the <a
         href="https://github.com/fcambus/spleen">Spleen</a> font in the
-        terminal.
+        terminal.</p>
       </dd>
 
       <dt class="date">2021-06-20</dt>
       <dd>
-        New website is live! <a href="/new/">Here's</a> why.
+        <p>New website is live! <a href="/new/">Here's</a> why.</p>
       </dd>
 
       <dt class="date">2021-05-23</dt>
       <dd>
-        A good habit to form: Reading in <em>A Calendar of Wisdom</em> by Leo
-        Tolstoy every day.
+        <p>A good habit to form: Reading in <em>A Calendar of Wisdom</em> by Leo
+        Tolstoy every day.</p>
       </dd>
 
       <dt class="date">2021-05-14</dt>
       <dd>
-        <a href="https://www.idler.co.uk/article/73979-how-to-write/">How to
+        <p><a href="https://www.idler.co.uk/article/73979-how-to-write/">How to
         Write: why jotting things into notebooks improves your writing</a>
-        &ndash; I fully agree.
+        &ndash; I fully agree.</p>
       </dd>
 
       <dt class="date">2021-05-06</dt>
       <dd>
-        Yes &ndash; <a href="https://dailystoic.com/this-is-the-mindset-for-life/">This is
-        the Mindset For Life</a>.
+        <p>Yes &ndash; <a
+        href="https://dailystoic.com/this-is-the-mindset-for-life/">This is the
+        Mindset For Life</a>.</p>
       </dd>
 
       <dt class="date">2021-05-02</dt>
       <dd>
-        Switched from Vim to nvi.  Vim started to feel too bloated.
+        <p>Switched from Vim to nvi. Vim started to feel too bloated.</p>
       </dd>
 
       <dt class="date">2021-05-01</dt>
-      <dd><a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a> released
-      &ndash; the 50th OpenBSD release!</dd>
+      <dd>
+        <p><a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a> released
+        &ndash; the 50th OpenBSD release!</p>
+      </dd>
     </dl>
 
   </body>
