--- a/index.html
+++ b/index.html
@@ -24,35 +24,32 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-09-06</dt>
+      <dd>
+        <figure class="quote">
+          <blockquote>Man alone measures time.  Man alone chimes the hour.  And,
+          because of this, man alone suffers a paralyzing fear that no other
+          creature endures.  A fear of time running out.</blockquote>
+          <figcaption>Mitch Albom, &ldquo;The Time Keeper&rdquo;</figcaption>
+        </figure>
+
+        <p>(Related recent article by Chris Guillebeau: <a
+        href="https://chrisguillebeau.com/time-anxiety/">Time Anxiety Is the
+        Most Pressing Problem of Our Age</a>)</p>
+      </dd>
+
       <dt class="date">2021-08-29</dt>
       <dd>
-        <div class="quote">
-          <q>Life is not lost by dying; life is lost minute by minute, day by
-          dragging day, in all the thousand small uncaring ways.</q><br />
-          <span>&ndash; Stephen Vincent Benét</span>
-        </div>
+        <figure class="quote">
+          <blockquote>Life is not lost by dying; life is lost minute by minute, day by
+          dragging day, in all the thousand small uncaring ways.</blockquote>
+          <figcaption>Stephen Vincent Benét</figcaption>
+        </figure>
       </dd>
 
       <dt class="date">2021-08-08</dt>
       <dd>
-        Rediscovering the joy of cycling.
-      </dd>
-
-      <dt class="date">2021-08-08</dt>
-      <dd>
-        Two very convenient shell aliases for copying the primary X selection to
-        the system clipboard and vice versa:
-        <pre><code>alias primary2clip='xsel -p | xsel -i -b'
-          alias clip2primary='xsel -b | xsel -i -p'
-        </code></pre>
-        Alternatively, using <em>xclip</em> instead of <em>xsel</em>:
-        <pre><code>alias primary2clip='xclip -o -selection primary | xclip -i -selection clipboard'
-          alias clip2primary='xclip -o -selection clipboard | xclip -i -selection primary'
-        </code></pre>
-        See <a
-        href="https://shallowsky.com/blog/linux/x-selection.html">X is for the X
-        Selection: Copy and Paste on Linux (Shallow Thoughts)</a> for more
-        information.
+        <p>Rediscovering the joy of cycling.</p>
       </dd>
     </dl>
 
