--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,20 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-09-08</dt>
+      <dd>
+        <p>Wise advice: <a
+        href="https://dailystoic.com/make-sure-you-write-down-everything-interesting-that-you-find/">Make
+        Sure You Write Down Everything Interesting That You Find</a>.</p>
+      </dd>
+
+      <dt class="date">2021-09-08</dt>
+      <dd>
+        <p>Beautiful article: <a
+        href="https://craigmod.com/ridgeline/111/">Long, Boring Walks</a> by
+        Craig Mod.</p>
+      </dd>
+
       <dt class="date">2021-09-07</dt>
       <dd>
         <p>Can we <em>please</em> establish a universal code of conduct stating
