Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,17 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-09-13</dt>
+      <dd>
+        <figure class="quote">
+          <blockquote>My advice (for what it's worth) for success and happiness:
+          Compete with yourself and root for everybody else.</blockquote>
+          <figcaption>Candice Millard, <a
+          href="https://twitter.com/candice_millard/status/1383508127442608141?lang=en">
+          https://twitter.com/candice_millard/status/1383508127442608141?lang=en</a></figcaption>
+        </figure>
+      </dd>
+
       <dt class="date">2021-09-08</dt>
       <dd>
         <p>Wise advice: <a
