--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-09-13</dt>
+      <dd>
+        <figure class="quote">
+          <blockquote>My advice (for what it's worth) for success and happiness:
+          Compete with yourself and root for everybody else.</blockquote>
+          <figcaption>Candice Millard, <a
+          href="https://twitter.com/candice_millard/status/1383508127442608141?lang=en">
+          https://twitter.com/candice_millard/status/1383508127442608141?lang=en</a></figcaption>
+        </figure>
+      </dd>
+
       <dt class="date">2021-09-08</dt>
       <dd>
         <p>Wise advice: <a
@@ -36,12 +47,6 @@
         <p>Beautiful article: <a
         href="https://craigmod.com/ridgeline/111/">Long, Boring Walks</a> by
         Craig Mod.</p>
-      </dd>
-
-      <dt class="date">2021-09-07</dt>
-      <dd>
-        <p>Can we <em>please</em> establish a universal code of conduct stating
-        that no smartphones are to be used at the dining table?</p>
       </dd>
     </dl>
 
