Update now page

--- a/now/index.html
+++ b/now/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="What I'm Doing Now">
     <title>Now | Thorsten Zöller</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
     <link href="/style.css" rel="stylesheet" />
@@ -15,19 +16,17 @@
 
     <ul>
       <li>Practicing Ashtanga Yoga daily.</li>
-      <li>Meditating (not quite daily).</li>
       <li>
-        Reading <a
-        href="https://markmanson.net/books/everything-is-fucked">Everything is
-        F*cked: A Book About Hope</a> by Mark Manson.
+        Reading <a href="https://sive.rs/m">Your Music and People</a> by Derek
+        Sivers.
       </li>
     </ul>
 
     <p>
-      Inspired by <a href="https://sivers.org/nowff">The /now page movement</a>
+      Inspired by <a href="https://sive.rs/nowff">The /now page movement</a>
       by <a href="https://sive.rs">Derek Sivers</a>.
     </p>
 
-    <p>Last updated: 2021-06-20</p>
+    <p>Last updated: 2021-10-02</p>
   </body>
 </html>
