Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,15 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-10-03</dt>
+      <dd>
+        <p>High school and university students have designed and built a <a
+        href="https://build-your-own-particle-detector.org/models/alice-lego-model/">LEGO
+        model</a> of the detector of the <a href="https://alice.cern/">ALICE</a>
+        experiment at <a href="https://home.cern/">CERN</a>, consisting of about
+        16,000 LEGO bricks &ndash; highly impressive!</p>
+      </dd>
+
       <dt class="date">2021-09-23</dt>
       <dd>
         <p><a href="https://craigmod.com/roden/059/">Roden 059 &ndash; Stupid
