--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-10-03</dt>
+      <dd>
+        <p>High school and university students have designed and built a <a
+        href="https://build-your-own-particle-detector.org/models/alice-lego-model/">LEGO
+        model</a> of the detector of the <a href="https://alice.cern/">ALICE</a>
+        experiment at <a href="https://home.cern/">CERN</a>, consisting of about
+        16,000 LEGO bricks &ndash; highly impressive!</p>
+      </dd>
+
       <dt class="date">2021-09-23</dt>
       <dd>
         <p><a href="https://craigmod.com/roden/059/">Roden 059 &ndash; Stupid
@@ -53,13 +62,6 @@
           href="https://twitter.com/candice_millard/status/1383508127442608141?lang=en">
           https://twitter.com/candice_millard/status/1383508127442608141?lang=en</a></figcaption>
         </figure>
-      </dd>
-
-      <dt class="date">2021-09-08</dt>
-      <dd>
-        <p>Wise advice: <a
-        href="https://dailystoic.com/make-sure-you-write-down-everything-interesting-that-you-find/">Make
-        Sure You Write Down Everything Interesting That You Find</a>.</p>
       </dd>
     </dl>
 
