--- a/new/index.html
+++ b/new/index.html
@@ -13,6 +13,8 @@
 
     <h2>My New Website</h2>
 
+    <div class="date">2021-06-20</div>
+
     <p>
       Not long ago, I created my first website. It was a static website, just like
       this one. I wrote the content in AsciiDoc and created a small script
