Add article list on main page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 
     <p>A little bit of background <a href="/about/">about me and this site</a>.</p>
 
+    <h3>Articles</h3>
+
+    <dl class="articles">
+      <dt class="date">2021-10-21</dt>
+      <dd><a href="/pretended-intentionality/">Pretended Intentionality</a></dd>
+
+      <dt class="date">2021-06-20</dt>
+      <dd><a href="/new/">My New Website</a></dd>
+    </dl>
+
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
