Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,17 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-10-21</dt>
+      <dd>
+        <p>&ldquo;...which components of what aspects of the many things making
+        up our lives at any point are worth noting in some external fashion, and
+        which can be left undocumented?&rdquo; &ndash; The question <a
+        href="https://colin.io/">Colin Wright</a> is asking in his newsletter
+        article <a
+        href="https://www.getrevue.co/profile/colinwright/issues/documentation-819300">Documentation</a>,
+        and a question I am pondering as well.</p>
+      </dd>
+
       <dt class="date">2021-10-03</dt>
       <dd>
         <p>High school and university students have designed and built a <a
