Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -60,8 +60,8 @@
           <blockquote>My advice (for what it's worth) for success and happiness:
           Compete with yourself and root for everybody else.</blockquote>
           <figcaption>Candice Millard, <a
-          href="https://twitter.com/candice_millard/status/1383508127442608141?lang=en">
-          https://twitter.com/candice_millard/status/1383508127442608141?lang=en</a></figcaption>
+          href="https://twitter.com/candice_millard/status/1383508127442608141">Tweet
+          on 2021-04-17</a></figcaption>
         </figure>
       </dd>
 
