Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,12 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-11-13</dt>
+      <dd>
+        <p>I love beautiful hand-crafted web sites. Examples: <a href="https://sive.rs/">sive.rs</a>,
+        <a href="http://mlaine.sdfeu.org/">mlaine.sdfeu.org</a>.</p>
+      </dd>
+
       <dt class="date">2021-10-21</dt>
       <dd>
         <p>&ldquo;...which components of what aspects of the many things making
