Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -16,6 +16,13 @@
     <dl>
       <dt class="date">2021-11-13</dt>
       <dd>
+        <p>Finished reading <a href="https://sive.rs/m">Your Music and
+        People</a> by <a href="https://sive.rs/">Derek Sivers</a> and loved it,
+        though I am not even a musician myself!</p>
+      </dd>
+
+      <dt class="date">2021-11-13</dt>
+      <dd>
         <p>I love beautiful hand-crafted web sites. Examples: <a href="https://sive.rs/">sive.rs</a>,
         <a href="http://mlaine.sdfeu.org/">mlaine.sdfeu.org</a>.</p>
       </dd>
