--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     <dl>
       <dt class="date">2021-11-13</dt>
       <dd>
+        <p>Finished reading <a href="https://sive.rs/m">Your Music and
+        People</a> by <a href="https://sive.rs/">Derek Sivers</a> and loved it,
+        though I am not even a musician myself!</p>
+      </dd>
+
+      <dt class="date">2021-11-13</dt>
+      <dd>
         <p>I love beautiful hand-crafted web sites. Examples: <a href="https://sive.rs/">sive.rs</a>,
         <a href="http://mlaine.sdfeu.org/">mlaine.sdfeu.org</a>.</p>
       </dd>
@@ -49,15 +56,6 @@
         article <a
         href="https://www.getrevue.co/profile/colinwright/issues/documentation-819300">Documentation</a>,
         and a question I am pondering as well.</p>
-      </dd>
-
-      <dt class="date">2021-10-03</dt>
-      <dd>
-        <p>High school and university students have designed and built a <a
-        href="https://build-your-own-particle-detector.org/models/alice-lego-model/">LEGO
-        model</a> of the detector of the <a href="https://alice.cern/">ALICE</a>
-        experiment at <a href="https://home.cern/">CERN</a>, consisting of about
-        16,000 LEGO bricks &ndash; highly impressive!</p>
       </dd>
     </dl>
 
