Update now page

--- a/now/index.html
+++ b/now/index.html
@@ -15,10 +15,10 @@
     <h2>What I'm Doing Now</h2>
 
     <ul>
-      <li>Practicing Ashtanga Yoga daily.</li>
+      <li><p>Practicing Ashtanga Yoga daily.</p></li>
       <li>
-        Reading <a href="https://sive.rs/m">Your Music and People</a> by Derek
-        Sivers.
+        <p>Reading <a href="https://sive.rs/n">Hell Yeah or No</a> by Derek
+        Sivers.</p>
       </li>
     </ul>
 
@@ -27,6 +27,6 @@
       by <a href="https://sive.rs">Derek Sivers</a>.
     </p>
 
-    <p>Last updated: 2021-10-02</p>
+    <p>Last updated: 2021-11-14</p>
   </body>
 </html>
