Add page on OpenBSD

--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
 
     <p><a href="/finds/">See all...</a></p>
 
+    <h3>Miscellaneous</h3>
+
+    <ul>
+      <li>
+        <p><a href="/openbsd/">OpenBSD</a> &ndash; a collection of information
+        on the OpenBSD operating system.</p>
+      </li>
+    </ul>
+
     <h3>Uses</h3>
 
     <p>
