Update uses page

--- a/uses/index.html
+++ b/uses/index.html
@@ -42,10 +42,17 @@
     <dl>
       <dt><a href="https://www.openbsd.org/">OpenBSD</a></dt>
       <dd>
-        After having used various Linux distributions for many years, I feel
+        <p>After having used various Linux distributions for many years, I feel
         like I have finally found my (close to) perfect operating system.  It is
         small, clean and simple, and perfectly suits my needs.  It just
-        <emph>feels</emph> right.
+        <emph>feels</emph> right.</p>
+
+        <p>While not all of the hardware inside the Medion AKOYA E4253 is
+        currently supported by OpenBSD (in particular, <a
+        href="https://man.openbsd.org/iwm.4">iwm(4)</a> does not support the
+        Intel Wireless-AC 9462 internal WiFi adapter), it runs reasonably well
+        on it altogether.  Here is my <a href="../dmesg_20211209.txt">dmesg</a>
+        (OpenBSD 6.9).</p>
       </dd>
 
       <dt>nvi</dt>
