Update OpenBSD page

--- a/openbsd/index.html
+++ b/openbsd/index.html
@@ -115,8 +115,12 @@
         href="https://rgz.ee/openbsd/">rgz.ee/openbsd/</a> &ndash; Roman
         Zolotarev's web site contains a ton of highly useful information on
         OpenBSD, in particular a guide on installing OpenBSD on a desktop (see
-        <a href="#installation">Installation and Configuration</a>).  Highly
+        <a href="#installation">Installation and Configuration</a>). Highly
         recommendable!</p>
+      </li>
+
+      <li>
+        <p><a href="https://www.openbsdhandbook.com/">OpenBSD Handbook</a></p>
       </li>
 
       <li>
@@ -125,8 +129,18 @@
       </li>
 
       <li>
-        <p><a href="https://why-openbsd.rocks">Why OpenBSD rocks</a> &ndash; &ldquo;a list
-        of all the great things that OpenBSD has.&rdquo;</p>
+        <p><a href="https://why-openbsd.rocks">Why OpenBSD rocks</a> &ndash;
+        &ldquo;a list of all the great things that OpenBSD has.&rdquo;</p>
+      </li>
+
+      <li>
+        <p><a href="https://bsdly.blogspot.com/">That grumpy BSD guy</a> &ndash;
+        Blog of Peter N. M. Hansteen.</p>
+      </li>
+
+      <li>
+        <p><a href="https://jcs.org/tagged/openbsd">OpenBSD articles on Joshua
+        Stein's blog</a></p>
       </li>
 
       <li>
@@ -137,6 +151,11 @@
       <li>
         <p><a href="https://blog.lambda.cx/tags/openbsd/">OpenBSD articles on
         the lambda.cx blog</a></p>
+      </li>
+
+      <li>
+        <p><a href="https://www.cambus.net/categories/openbsd/">OpenBSD articles
+        on Frederic Cambus' blog</a></p>
       </li>
     </ul>
 
@@ -162,12 +181,20 @@
       <li>
         <p><a
         href="https://cfenollosa.com/blog/openbsd-from-a-veteran-linux-user-perspective.html">OpenBSD
-        from a veteran Linux user perspective</a> by Carlos Fenollosa.</p>
+        from a veteran Linux user perspective</a> and <a
+        href="https://cfenollosa.com/blog/what-are-the-differences-between-openbsd-and-linux.html">What
+        are the differences between OpenBSD and Linux?</a> by Carlos Fenollosa.
+        </p>
       </li>
 
       <li>
         <p><a href="https://runbsd.info/">Run BSD</a> &ndash; People running
         BSD (OpenBSD and other BSD flavors).</p>
+      </li>
+
+      <li>
+        <p><a href="https://www.cambus.net/why-openbsd/">Why OpenBSD?</a> by
+        Frederic Cambus.</p>
       </li>
     </ul>
 
