Update uses page

--- a/uses/index.html
+++ b/uses/index.html
@@ -96,6 +96,13 @@
         obvious choice.  Part of OpenBSD base.
       </dd>
 
+      <dt><a href="https://www.rainloop.net/">RainLoop</a></dt>
+      <dd>
+        Ideally, I would only be using <a href="http://www.mutt.org/">Mutt</a>.
+        Due to the proliferation of HTML e-mails, however, this is simply not
+        feasible any more.  RainLoop is the best alternative I know of.
+      </dd>
+
       <dt><a href="https://mupdf.com/">MuPDF</a></dt>
       <dd>
         A fast and lightweight viewer for PDF files with vi-like keybindigs.
@@ -110,6 +117,17 @@
       <dd>
         I rarely need a media player, but if I do, I will use FFplay from the <a
         href="https://ffmpeg.org/">FFmpeg</a> multimedia framework.
+      </dd>
+
+      <dt><a href="https://flak.tedunangst.com/post/sct-set-color-temperature">sct</a></dt>
+      <dd>
+        sct is a small tool which sets the color temperature of the screen.
+        This makes it possible to have warmer screen colors at night, when the
+        surroundings are dark.  It is similar in functionality to <a
+        href="https://justgetflux.com/">f.lux</a> and <a
+        href="http://jonls.dk/redshift/">Redshift</a>, but much smaller and with
+        much less dependencies.  Created, somehow fittingly, by OpenBSD
+        developer <a href="https://www.tedunangst.com/">Ted Unangst</a>.
       </dd>
 
       <dt><a href="https://asciidoctor.org/">Asciidoctor</a>
