--- a/openbsd/index.html
+++ b/openbsd/index.html
@@ -157,6 +157,11 @@
         <p><a href="https://www.cambus.net/categories/openbsd/">OpenBSD articles
         on Frederic Cambus' blog</a></p>
       </li>
+
+      <li>
+        <p><a href="http://darwinsys.com/openbsd/">Ian Darwin on UNIX and
+        OpenBSD</a></p>
+      </li>
     </ul>
 
     <h3>Miscellaneous</h3>
