Update 'Finds & Thoughts'

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <h3>Finds &amp; Thoughts</h3>
 
     <dl>
+      <dt class="date">2021-12-20</dt>
+      <dd>
+        <p>I hate Ashtanga Yoga. And I love it.</p>
+      </dd>
+
       <dt class="date">2021-12-18</dt>
       <dd>
         <p>Rediscovered two good posts by Zach Holman (and, well, <a
@@ -50,12 +55,6 @@
         <p>Finished reading <a href="https://sive.rs/m">Your Music and
         People</a> by <a href="https://sive.rs/">Derek Sivers</a> and loved it,
         though I am not even a musician myself!</p>
-      </dd>
-
-      <dt class="date">2021-11-13</dt>
-      <dd>
-        <p>I love beautiful hand-crafted web sites. Examples: <a href="https://sive.rs/">sive.rs</a>,
-        <a href="http://mlaine.sdfeu.org/">mlaine.sdfeu.org</a>.</p>
       </dd>
     </dl>
 
