--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,11 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2021-12-20</dt>
+      <dd>
+        <p>I hate Ashtanga Yoga. And I love it.</p>
+      </dd>
+
       <dt class="date">2021-12-18</dt>
       <dd>
         <p>Rediscovered two good posts by Zach Holman (and, well, <a
