Update contact e-mail address

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <p>
       Contact me at <a
-      href="mailto:thorsten.zoeller@posteo.de">thorsten.zoeller@posteo.de</a>.
+      href="mailto:thorsten@thorstenzoeller.com">thorsten@thorstenzoeller.com</a>.
     </p>
 
     <hr />
