--- a/uses/index.html
+++ b/uses/index.html
@@ -98,9 +98,13 @@
 
       <dt><a href="https://www.rainloop.net/">RainLoop</a></dt>
       <dd>
-        Ideally, I would only be using <a href="http://www.mutt.org/">Mutt</a>.
-        Due to the proliferation of HTML e-mails, however, this is simply not
-        feasible any more.  RainLoop is the best alternative I know of.
+        <p>Ideally, I would only be using <a
+        href="http://www.mutt.org/">Mutt</a>.  Due to the proliferation of HTML
+        e-mails, however, this is simply not feasible any more.  RainLoop is the
+        best alternative I know of.</p>
+
+        <p>See <a href="/rainloop-on-openbsd/">Installation and Setup of the
+        RainLoop Webmail Client on OpenBSD</a>.</p>
       </dd>
 
       <dt><a href="https://mupdf.com/">MuPDF</a></dt>
