--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 
     <h3>Articles</h3>
 
-    <dl class="articles">
-      <dt class="date">2021-10-21</dt>
-      <dd><a href="/pretended-intentionality/">Pretended Intentionality</a></dd>
+    <ul>
+      <li><a href="/rainloop-on-openbsd/">Installation and Setup of the RainLoop
+      Webmail Client on OpenBSD</a></li>
 
-      <dt class="date">2021-06-20</dt>
-      <dd><a href="/new/">My New Website</a></dd>
-    </dl>
+      <li><a href="/pretended-intentionality/">Pretended Intentionality</a></li>
+
+      <li><a href="/new/">My New Website</a></li>
+    </ul>
 
     <h3>Finds &amp; Thoughts</h3>
 
@@ -64,8 +65,8 @@
 
     <ul>
       <li>
-        <p><a href="/openbsd/">OpenBSD</a> &ndash; a collection of information
-        on the OpenBSD operating system.</p>
+        <a href="/openbsd/">OpenBSD</a> &ndash; a collection of information on
+        the OpenBSD operating system.
       </li>
     </ul>
 
