Update OpenBSD page

--- a/openbsd/index.html
+++ b/openbsd/index.html
@@ -120,6 +120,10 @@
       </li>
 
       <li>
+        <p><a href="https://www.bsdhowto.ch/">BSD How To</a> by Bruno Flückiger.</p>
+      </li>
+
+      <li>
         <p><a href="https://www.openbsdhandbook.com/">OpenBSD Handbook</a></p>
       </li>
 
