Add article 'My Text Playlist'

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     <h3>Articles</h3>
 
     <ul>
-      <li><a href="/rainloop-on-openbsd/">Installation and Setup of the RainLoop
-      Webmail Client on OpenBSD</a></li>
+      <li><p><a href="/text-playlist/">My Text Playlist</a></p></li>
 
-      <li><a href="/pretended-intentionality/">Pretended Intentionality</a></li>
+      <li><p><a href="/rainloop-on-openbsd/">Installation and Setup of the
+      RainLoop Webmail Client on OpenBSD</a></p></li>
 
-      <li><a href="/new/">My New Website</a></li>
+      <li><p><a href="/pretended-intentionality/">Pretended
+      Intentionality</a></p></li>
+
+      <li><p><a href="/new/">My New Website</a></p></li>
     </ul>
 
     <h3>Finds &amp; Thoughts</h3>
