Add page on the vi editor

--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
 
     <ul>
       <li>
-        <a href="/openbsd/">OpenBSD</a> &ndash; a collection of information on
-        the OpenBSD operating system.
+        <p><a href="/openbsd/">OpenBSD</a> &ndash; a collection of information on
+        the OpenBSD operating system.</p>
+      </li>
+
+      <li>
+        <p><a href="/vi/">vi</a> &ndash; a collection of information on the vi
+        editor.</p>
       </li>
     </ul>
 
