--- a/uses/index.html
+++ b/uses/index.html
@@ -53,15 +53,18 @@
         Intel Wireless-AC 9462 internal WiFi adapter), it runs reasonably well
         on it altogether.  Here is my <a href="../dmesg_20211209.txt">dmesg</a>
         (OpenBSD 6.9).</p>
+
+        <p>More information on OpenBSD can be found on <a
+        href="/openbsd/">my OpenBSD page</a>.</p>
       </dd>
 
       <dt>nvi</dt>
       <dd>
-        I was a <a href="https://www.vim.org/">Vim</a> user for many years, but
-        recently Vim started to feel too bloated to me.  Therefore, I switched
-        to nvi and never looked back since then.  It turns out that many
-        features I once thought were indispensable are in fact very easy to live
-        without.  For instance, read <a
+        <p>I was a <a href="https://www.vim.org/">Vim</a> user for many years,
+        but recently Vim started to feel too bloated to me.  Therefore, I
+        switched to nvi and never looked back since then.  It turns out that
+        many features I once thought were indispensable are in fact very easy to
+        live without.  For instance, read <a
         href="http://linusakesson.net/programming/syntaxhighlighting/index.php">this</a>
         if you think you can't do without syntax highlighting (as I did), and <a
         href="https://stackoverflow.com/questions/1218390/what-is-your-most-productive-shortcut-with-vim/1220118#1220118">this</a>
@@ -69,7 +72,10 @@
         to offer (read it even if you don't).  The only thing I really miss is
         Unicode support, which is why I have to revert to nvi-iconv instead of
         being able to use the default version, <a
-        href="https://man.openbsd.org/vi.1">vi(1)</a>, from OpenBSD base.
+        href="https://man.openbsd.org/vi.1">vi(1)</a>, from OpenBSD base.</p>
+
+        <p>More information on the vi editor can be found on <a href="/vi">my vi
+        page</a>.</p>
       </dd>
 
       <dt>cwm</dt>
